Refactor Docker configuration in render.yaml for clarity

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: php-app
     env: docker
     plan: free
-    dockerfilePath: ./Dockerfile
+    rootDir: .
+    dockerfilePath: Dockerfile
     buildCommand: ""
     startCommand: >
       sh -c "php-fpm & nginx -g 'daemon off;'"
